Fix a thread restriction violation around video_capture

CreateVideoCaptureDeviceFactory requires the task runner for UI thread,
but the task runner passed by DeviceFactoryProviderImpl to CVCDF is not.
That causes DCHECK failure around AddObserverOnDisplayThread on
ScreenObserverDelegate.

Bug: 909975
Change-Id: I778647b87c619002c64fa871252e88ac184ea5cf
Reviewed-on: https://chromium-review.googlesource.com/c/1367388
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Taiju Tsuiki <tzik@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615873}
Former-commit-id: 18144b14e8f07ed78ec66399ac2bf4ef606c4b17